# vm

./: .clippy.toml  .editorconfig  .gitignore  .rustfmt.toml  AGENT_3_VIRTUALCPU_COMPLETE.md  AGENT_COMPLETION_REPORT.md  ALL_DUPLICATE_DEPENDENCIES.txt  AOT_CACHE_FINAL_IMPLEMENTATION_REPORT.md  AOT_CACHE_IMPLEMENTATION_COMPLETE.md  AOT_CACHE_INTEGRATION_COMPLETE.md  AOT_CACHE_SESSION_COMPLETE.md  API_DOCUMENTATION.md  ARCHITECTURE.md  ARCHITECTURE_INSTRUCTION_ANALYSIS.md  ARCHITECTURE_INSTRUCTION_AUDIT.md  ARCHITECTURE_REVIEW.md  BENCHMARK_COVERAGE_SUMMARY.md  BENCHMARK_EXECUTION_SUMMARY.md  BENCHMARK_IMPLEMENTATION_REPORT.md  BENCHMARK_OPTIMIZATION_CHECKLIST.md  BENCHMARK_PLAN.md  BIOS_INTERRUPT_IMPLEMENTATION.md  CACHE_PERFORMANCE_OPTIMIZATION_REPORT_2026_01_07.md  CARGO_HAKARI_OPTIMIZATION_2026_01_07.md  CARGO_LOCK_CHANGES.md  CHANGELOG.md  CI_CD_FIXES_REPORT.md  CI_CD_IMPLEMENTATION_REPORT.md  CI_CD_VALIDATION_REPORT.md  CLIPPY_ANALYSIS_REPORT.md  CLIPPY_CLEANUP_REPORT.md  CLIPPY_CLEANUP_SUMMARY.md  CLIPPY_CODE_QUALITY_REPORT_2026_01_07.md  CLIPPY_COMPARISON.txt  CLIPPY_FIXES_GUIDE.rs  CLIPPY_FIXES_SUMMARY.md  CLIPPY_WARNINGS_ELIMINATION_REPORT.md  CLI_RALPH_LOOP_ALL_ITERATIONS_SUMMARY.md  CLI_RALPH_LOOP_ITERATION_1_COMPLETE.md  CLI_RALPH_LOOP_ITERATION_2_COMPLETE.md  (+530 more)
aot-builder/: Cargo.toml
aot-builder/src/: codegen_cranelift.rs  codegen_direct.rs  codegen_llvm.rs  config.rs  dependency_analyzer.rs  incremental.rs  ir_processor.rs  lib.rs  main.rs  optimizer.rs  pgo_integration.rs
benches/: Cargo.toml  GPU_BENCHMARKS_IMPLEMENTATION.md  adaptive_sharding_bench.rs  async_device_io_bench.rs  async_execution_engine_benchmark.rs  async_performance_benchmark.rs  block_cache_bench.rs  comprehensive_async_benchmark.rs  comprehensive_benchmarks.rs  comprehensive_jit_benchmark.rs  comprehensive_performance_benchmark.rs  cross_arch_benchmark.rs  cross_arch_comprehensive_bench.rs  cross_arch_translation_bench.rs  device_io_bench.rs  fast_path_bench.rs  gc_bench.rs  gc_performance_benchmark.rs  hotpath_comprehensive_bench.rs  jit_compilation_bench.rs  jit_compile_performance_benchmark.rs  jit_core_benchmarks.rs  jit_gc_performance_benchmarks.rs  lib.rs  lock_contention_benchmark.rs  memory_allocation_bench.rs  memory_optimization_benchmark.rs  performance_benchmark.rs  performance_suite.rs  pgo_jit_bench.rs  phase2_performance_benchmark.rs  quick_optimization_bench.rs  round35_37_performance_verification.rs  snapshot_bench.rs  test_bulk_read_only.rs  test_gpu_bench.rs  tlb_cache_benchmark.rs  vm_benchmark.rs
benches/baselines/: main.json
benches/framework/: mod.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: instruction_decoder.rs  jit_compiler.rs  memory_access.rs
perf-bench/: Cargo.toml
perf-bench/benches/: actual_workload_bench.rs  comprehensive_performance.rs  cross_arch_translation.rs  gc_performance.rs  jit_core_benchmarks.rs  simd_memory_comparison.rs
perf-bench/src/: lib.rs
vm-accel/: Cargo.toml  PLATFORM_TESTS.md  README.md  TEST_COVERAGE_REPORT.md  VCPU_NUMA_INTEGRATION_REPORT.md
vm-accel/examples/: kvm_interrupt_controller.rs
vm-accel/src/: ._hvf.rs  accel.rs  accel_fallback.rs  amd.rs  apple.rs  cpuinfo.rs  error.rs  event.rs  event_loop.rs  hvf.rs  hvf.rs.old  hvf_impl.rs  intel.rs  kvm.rs  kvm.rs.old  kvm_enhanced.rs  kvm_event_source.rs  kvm_impl.rs  kvm_impl_optimized.rs  kvm_numa.rs  lib.rs  macros.rs  mobile.rs  numa_optimizer.rs  platform_detect.rs  realtime.rs  realtime_monitor.rs  smmu.rs  smmu_tests.rs  vcpu_affinity.rs  vcpu_common.rs  vcpu_numa_manager.rs  vendor_extensions.rs  vz_impl.rs  whpx.rs  whpx.rs.old  whpx_impl.rs  whpx_io.rs
vm-accel/tests/: accel_fallback_tests.rs  acceleration_manager_tests.rs  cpu_feature_detection_tests.rs  hvf_backend_tests.rs  integration_tests.rs  kvm_backend_tests.rs  numa_optimization_tests.rs  simd_tests.rs  vcpu_numa_integration_test.rs
vm-adaptive/: Cargo.toml
vm-adaptive/src/: lib.rs
vm-boot/: Cargo.toml
vm-boot/benches/: gc_performance.rs
vm-boot/src/: boot_chain_example.rs  eltorito.rs  event_loop.rs  fast_boot.rs  gc_runtime.rs  hotplug.rs  incremental_snapshot.rs  iso9660.rs  lib.rs  os_boot.rs  runtime.rs  runtime_service.rs  runtime_service_legacy.rs  snapshot.rs
vm-boot/tests/: boot_config_tests.rs
vm-build-deps/: Cargo.toml
vm-cli/: CLI_IMPROVEMENTS.md  Cargo.toml  README.md
vm-cli/src/: main.rs
vm-codegen/: Cargo.toml  Cargo.toml.new  TODO_RESOLUTION_REPORT.md  arm64_frontend_simple.rs  arm64_frontend_standalone.rs  build.rs  complete_frontend_codegen  minimal_todo_resolver  standalone_frontend_codegen
vm-codegen/examples/: arm64_instructions.rs  complete_frontend_codegen.rs  generate_arm64_frontend.rs  generate_riscv_frontend.rs  minimal_todo_resolver.rs  riscv_frontend_generator.rs  riscv_instructions.rs  simple_frontend_codegen.rs  simple_todo_fixer.rs  simple_todo_resolver.rs  standalone_frontend_codegen.rs  todo_fixer.rs  todo_resolver.rs
vm-codegen/src/: codegen_cranelift.rs  config.rs  frontend_generator.rs  lib.rs
vm-common/: Cargo.toml
vm-common/src/: config.rs  (+4 more)
vm-core/: Cargo.toml  DDD_ANEMIC_MODEL.md  README.md  constants  fix_all_compilation_errors  fix_all_compilation_errors.rs  fix_conditional_compilation  fix_conditional_compilation.rs  fix_syntax_errors  fix_syntax_errors.rs
vm-cross-arch/: CHANGELOG.md  Cargo.toml  README.md
vm-cross-arch-integration-tests/: Cargo.toml
vm-cross-arch-support/: Cargo.toml  README.md
vm-desktop/: ATOMIC_DESIGN_IMPLEMENTATION_SUMMARY.md  CLEANUP_SUMMARY.md  Cargo.toml
vm-device/: Cargo.toml  README.md
vm-engine/: Cargo.toml  QUICK_REFERENCE.md
vm-engine-hybrid/: Cargo.toml
vm-engine-interpreter/: Cargo.toml
vm-engine-jit/: ARCHITECTURE.md  Cargo.toml  README.md  TODO_CHANGELOG.md  cache_performance_test  libunified_cache_minimal.rlib  unified_cache_minimal  阶段二统一缓存实施报告.md
vm-error/: Cargo.toml
vm-executors/: Cargo.toml  README.md
vm-foundation/: Cargo.toml
vm-frontend/: Cargo.toml
vm-gc/: Cargo.toml  README.md
vm-gpu/: Cargo.toml
vm-instruction-patterns/: Cargo.toml
vm-interface/: Cargo.toml
(+2326 files in other folders)
