[workspace]
members = [
    # Core
    "vm-core",

    # Cross-architecture
#     "vm-cross-arch",
    "vm-cross-arch-support",
    "vm-ir",
    "vm-frontend",

    # Memory
    "vm-mem",

    # Devices
    "vm-device",
    "vm-accel",

    # Execution engines (unified)
    "vm-engine",
    "vm-engine-jit",

    # Optimizers
    "vm-optimizers",
    "vm-gc",

    # Runtime
    "vm-boot",

    # Services
    "vm-service",

    # Platform
    "vm-platform",
    "vm-smmu",
    "vm-passthrough",

    # Other
    "vm-plugin",
    "vm-osal",

    # Testing and benchmarking (disabled - depend on removed vm-cross-arch)
#     "vm-perf-regression-detector",  # TODO: depends on removed vm-cross-arch, needs refactor

    # Additional packages
    "vm-codegen",
    "vm-cli",
    "vm-monitor",
    "vm-debug",
    "vm-desktop",

    # External compatibility
    "security-sandbox",
    "syscall-compat",

    # Benchmark suites
    "perf-bench",
    "tiered-compiler",
    "parallel-jit",
#     "benches",  # TODO: depends on removed vm-cross-arch, needs refactor
#     "vm-perf-regression-detector",  # Disabled: depends on removed vm-cross-arch
]
resolver = "2"

[workspace.metadata.docs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[workspace.dependencies]
# Error handling
thiserror = "2.0.17"
anyhow = "1.0"

# Async runtime
tokio = { version = "1.48", features = ["sync", "rt", "rt-multi-thread", "macros", "time", "io-util", "fs"] }
tokio-uring = { version = "0.5" }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = "3.0"
bincode = { version = "2.0.1", features = ["serde"] }

# Logging
log = "0.4"
env_logger = "0.11"

# Concurrency
parking_lot = "0.12"
futures = "0.3"

# Time
chrono = { version = "0.4", features = ["serde"] }

# UUID
uuid = { version = "1.13", features = ["v4", "serde"] }

# Async utilities
async-trait = "0.1"

# CPU utilities
num_cpus = { version = "1.16" }
raw-cpuid = { version = "11" }

# System libraries
libc = "0.2"

# GPU/Graphics
wgpu = "24"
winit = "0.30"
pollster = "0.4"

# Networking
smoltcp = { version = "0.12" }

# Compression
miniz_oxide = "0.7"

# TOML parsing
toml = "0.8"

# Regex
regex = "1.0"

# Backtrace
backtrace = "0.3"

# Tracing
tracing = "0.1"

# LRU cache
lru = "0.12"

# Crossbeam
crossbeam-queue = "0.3"

# Cranelift (JIT) - Pinned to 0.110.3 for stability and compatibility
cranelift-codegen = "=0.110.3"
cranelift-frontend = "=0.110.3"
cranelift-module = "=0.110.3"
cranelift-native = "=0.110.3"
cranelift-control = "=0.110.3"
target-lexicon = "0.12"

# System utilities
nix = { version = "0.29" }

# Windows
windows-sys = { version = "0.61", features = ["Win32_Foundation", "Win32_System_Memory"] }

# Testing
proptest = "1.0"
rand = "0.8"

# cfg-if
cfg-if = "1.0"

# Database
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio-rustls", "postgres", "chrono", "json", "uuid"] }

# Platform-specific
kvm-ioctls = { version = "0.24" }
kvm-bindings = { version = "0.14" }
vfio-bindings = "0.6"
windows = { version = "0.62", features = ["Win32_System_Hypervisor"] }

# Dev dependencies
tokio-test = "0.4"
criterion = "0.5"

[workspace.lints.rust]
warnings = "deny"
future_incompatible = "warn"
nonstandard_style = "warn"

[workspace.lints.clippy]
all = "warn"
pedantic = "warn"
cargo = "warn"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
authors = ["VM Development Team"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/example/vm"
documentation = "https://docs.rs/vm"
readme = "README.md"
keywords = ["virtual-machine", "emulator", "risc-v", "arm64", "jit"]
categories = ["emulators", "virtualization"]

[profile.dev]
opt-level = 0
debug = true
debug-assertions = true
overflow-checks = true
lto = false
incremental = true
codegen-units = 256
panic = "unwind"

[profile.test]
inherits = "dev"
opt-level = 1
debug = true
debug-assertions = true
overflow-checks = true
lto = false
incremental = true
codegen-units = 256

[profile.bench]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = "thin"
incremental = false
codegen-units = 1

[profile.release]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = "thin"
incremental = false
codegen-units = 1
panic = "unwind"
