[workspace]
members = [
    # ============================================================================
    # Core Libraries
    # ============================================================================
    "crates/core/vm-core",
    "crates/core/vm-ir",
    "crates/core/vm-boot",

    # ============================================================================
    # Execution Engines
    # ============================================================================
    "crates/execution/vm-engine",
    "crates/execution/vm-engine-jit",
    "crates/execution/vm-frontend",

    # ============================================================================
    # Memory Management
    # ============================================================================
    "crates/memory/vm-mem",
    "crates/memory/vm-gc",
    "crates/memory/vm-optimizers",

    # ============================================================================
    # Platform Abstraction
    # ============================================================================
    "crates/platform/vm-accel",
    "crates/platform/vm-osal",
    "crates/platform/vm-platform",

    # ============================================================================
    # Device Emulation
    # ============================================================================
    "crates/devices/vm-device",
    "crates/devices/vm-graphics",
    "crates/devices/vm-smmu",
    "crates/devices/vm-soc",

    # ============================================================================
    # Runtime Services
    # ============================================================================
    "crates/runtime/vm-service",
    "crates/runtime/vm-plugin",
    "crates/runtime/vm-monitor",

    # ============================================================================
    # Compatibility Layer
    # ============================================================================
    "crates/compatibility/security-sandbox",
    "crates/compatibility/syscall-compat",

    # ============================================================================
    # Architecture Support
    # ============================================================================
    "crates/architecture/vm-build-deps",
    "crates/architecture/vm-codegen",
    "crates/architecture/vm-cross-arch-support",

    # ============================================================================
    # Tools
    # ============================================================================
    "tools/cli",
    # "tools/desktop",  # Temporarily disabled - Tauri config issues
    "tools/debug",
    "tools/passthrough",
]
resolver = "2"

[workspace.metadata.docs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
default-target = "x86_64-unknown-linux-gnu"
targets = ["x86_64-unknown-linux-gnu", "aarch64-unknown-linux-gnu", "riscv64gc-unknown-linux-gnu"]

[workspace.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
default-target = "x86_64-unknown-linux-gnu"
targets = ["x86_64-unknown-linux-gnu", "aarch64-unknown-linux-gnu", "riscv64gc-unknown-linux-gnu"]

[workspace.dependencies]
# Error handling
thiserror = "2.0.17"
anyhow = "1.0"

# Async runtime
tokio = { version = "1.49", features = ["sync", "rt", "rt-multi-thread", "macros", "time", "io-util", "fs"] }
tokio-uring = { version = "0.5" }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = "3.0"
bincode = { version = "2.0.1", features = ["serde"] }

# Logging
log = "0.4"
env_logger = "0.11"

# Concurrency
parking_lot = "0.12"
futures = "0.3"

# Time
chrono = { version = "0.4", features = ["serde"] }

# UUID
uuid = { version = "1.13", features = ["v4", "serde"] }

# Async utilities
async-trait = "0.1"

# CPU utilities
num_cpus = { version = "1.16" }
raw-cpuid = { version = "11.2" }

# System libraries
libc = "0.2"

# GPU/Graphics
wgpu = "24"
winit = "0.30"
pollster = "0.4"

# Networking
smoltcp = { version = "0.12" }

# Compression
miniz_oxide = "0.7"

# Base64 encoding
base64 = "0.22.1"

# TOML parsing
toml = "0.8"

# Regex
regex = "1.0"

# Backtrace
backtrace = "0.3"

# Tracing
tracing = "0.1"

# LRU cache
lru = "0.12"

# Crossbeam
crossbeam-queue = "0.3"

# Cranelift (JIT) - Reverted to 0.123.4 due to API incompatibility
cranelift-entity = "0.123.4"
cranelift-codegen = "0.123.4"
cranelift-frontend = "0.123.4"
cranelift-module = "0.123.4"
cranelift-native = "0.123.4"
cranelift-control = "0.123.4"
target-lexicon = "0.12"

# System utilities
nix = { version = "0.29" }

# Windows
windows-sys = { version = "0.61", features = ["Win32_Foundation", "Win32_System_Memory"] }

# Testing
proptest = "1.0"
rand = "0.8"

# cfg-if
cfg-if = "1.0"

# Database
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio-rustls", "postgres", "chrono", "json", "uuid"] }

# Platform-specific
kvm-ioctls = { version = "0.24" }
kvm-bindings = { version = "0.14" }
vfio-bindings = "0.6"
windows = { version = "0.62", features = ["Win32_System_Hypervisor"] }

# Dev dependencies
tokio-test = "0.4"
criterion = "0.5"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.92"
authors = ["VM Development Team"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/example/vm"
documentation = "https://docs.rs/vm"
readme = "README.md"
keywords = ["virtual-machine", "emulator", "risc-v", "arm64", "jit"]
categories = ["emulators", "virtualization"]

# ============================================================================
# Workspace Lints - Code Quality Standards
# ============================================================================

[workspace.lints.rust]
# 拒绝所有警告，强制代码高质量
warnings = "deny"
# 拒绝不兼容的代码
future_incompatible = "deny"
# 拒绝非标准风格
nonstandard_style = "deny"
# 拒绝Rust 2018 idioms不匹配
rust_2018_idioms = "deny"
# 拒绝Rust 2021 prelude冲突
rust_2021_prelude_collisions = "deny"

[workspace.lints.clippy]
# 启用所有clippy lints
all = "deny"
# 启用pedantic lints（更严格的检查）
pedantic = "deny"
# Cargo相关的检查
cargo = "deny"
# 允许的例外（避免过于严格）
# must_use_candidate = "allow"  # 太严格，会产生大量警告
# missing_errors_doc = "allow"  # 可以逐步完善
# missing_panics_doc = "allow"
# too_many_lines = "allow"
# type_repetition_in_bounds = "allow"

# ============================================================================
# Profiles
# ============================================================================

[profile.dev]
debug-assertions = true
overflow-checks = true
lto = false
incremental = true
codegen-units = 256
panic = "unwind"

[profile.test]
inherits = "dev"
opt-level = 1
debug = true
debug-assertions = true
overflow-checks = true
lto = false
incremental = true
codegen-units = 256

[profile.bench]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = "fat"  # 优化: 使用fat LTO获得更好的性能
incremental = false
codegen-units = 1  # 保持1以获得最佳优化
strip = false  # 保留符号以便profiling

[profile.release]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = "fat"  # 优化: 使用fat LTO获得最佳性能
incremental = false
codegen-units = 1  # 保持1以获得最佳优化
panic = "unwind"
strip = true  # 优化: 生产环境移除符号以减小二进制大小

# ============================================================================
# Development dependencies for the workspace
# ============================================================================
# Note: workspace.dev-dependencies is deprecated in newer Cargo versions
# Individual packages should define their own dev-dependencies
# [workspace.dev-dependencies]
# # Optimization tools
# cargo-hakari = "0.9"
#
# # Code quality tools
# cargo-machete = "0.1"
#
# # Benchmarking and profiling
# criterion = "0.5"
#
# # Testing
# proptest = "1.0"
# quickcheck = "1.0"

