[package]
name = "vm-accel"
version = "0.1.0"
edition = "2024"

[dependencies]
raw-cpuid = { version = "11", optional = true }
num_cpus = "1.17"
log = "0.4"
thiserror = "2.0"
vm-core = { path = "../vm-core" }
parking_lot = "0.12"
serde = { version = "1.0", features = ["derive"] }

[target.'cfg(target_os = "linux")'.dependencies]
kvm-ioctls = { version = "0.24", optional = true }
kvm-bindings = { version = "0.14", optional = true }
libc = "0.2"

[target.'cfg(target_os = "macos")'.dependencies]
libc = "0.2"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.62", features = ["Win32_System_Hypervisor"], optional = true }

[features]
default = []
cpuid = ["raw-cpuid"]
# kvm = ["kvm-ioctls", "kvm-bindings"]  # Temporarily disabled due to compatibility issues
hvf = []
whpx = ["windows"]
