[package]
name = "vm-accel"
version.workspace = true
edition.workspace = true

[dependencies]
raw-cpuid = { version = "11", optional = true }
num_cpus.workspace = true
log.workspace = true
tracing.workspace = true
thiserror.workspace = true
vm-core = { path = "../vm-core" }
parking_lot.workspace = true
serde.workspace = true

[target.'cfg(target_os = "linux")'.dependencies]
kvm-ioctls = { version = "0.24", optional = true }
kvm-bindings = { version = "0.14", optional = true }
libc.workspace = true

[target.'cfg(target_os = "macos")'.dependencies]
libc.workspace = true

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.62", features = ["Win32_System_Hypervisor"], optional = true }

[features]
default = []
cpuid = ["raw-cpuid"]
kvm = ["kvm-ioctls", "kvm-bindings"]
hvf = []
whpx = ["windows"]
