[package]
name = "vm-accel"
version = "0.1.0"
edition = "2024"

[dependencies]
raw-cpuid = { workspace = true, optional = true }
num_cpus = { workspace = true }
log = { workspace = true }
thiserror = { workspace = true }
vm-core = { path = "../vm-core" }
vm-smmu = { path = "../vm-smmu", optional = true }
parking_lot = { workspace = true }
serde = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
kvm-ioctls = { workspace = true, optional = true }
kvm-bindings = { workspace = true, optional = true }
libc = { workspace = true }

[target.'cfg(target_os = "macos")'.dependencies]
libc = { workspace = true }

[target.'cfg(target_os = "windows")'.dependencies]
windows = { workspace = true, optional = true }

[features]
default = ["acceleration"]
# Acceleration features (merged: hardware, smmu)
acceleration = ["raw-cpuid", "dep:kvm-ioctls", "dep:kvm-bindings", "dep:vm-smmu"]

# Legacy feature aliases (deprecated, use "acceleration" instead)
hardware = ["acceleration"]
smmu = ["acceleration"]
