[package]
name = "vm-adaptive"
version = "0.1.0"
edition = "2024"
description = "Adaptive Optimization System for Virtual Machine"
authors = ["VM Team <team@vm-project.org>"]
license = "MIT OR Apache-2.0"

[dependencies]
vm-core = { path = "../vm-core" }
vm-monitor = { path = "../vm-monitor" }
vm-interface = { path = "../vm-interface" }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.48", features = ["full"] }
async-trait = "0.1"
num_cpus = "1.17"
chrono = { version = "0.4", features = ["serde"] }
parking_lot = "0.12"
thiserror = "2.0"
tracing = "0.1"

[dev-dependencies]
tokio-test = "0.4"
