[package]
name = "vm-adaptive"
version = "0.1.0"
edition = "2024"
description = "Adaptive Optimization System for Virtual Machine"
authors = ["VM Team <team@vm-project.org>"]
license = "MIT OR Apache-2.0"

[dependencies]
vm-core = { path = "../vm-core" }
vm-monitor = { path = "../vm-monitor" }
vm-interface = { path = "../vm-interface" }
serde = { workspace = true }
# vm-adaptive uses tokio for async operations and timers
# Minimal features for async runtime, time, and macros
tokio = { workspace = true }
async-trait = { workspace = true }
num_cpus = { workspace = true }
chrono = { workspace = true }
parking_lot = { workspace = true }
thiserror = { workspace = true }
tracing = "0.1"

[dev-dependencies]
tokio-test = { workspace = true }
