[package]
name = "vm-boot"
version = "0.1.0"
edition = "2024"

[dependencies]
vm-core = { path = "../vm-core" }
vm-mem = { path = "../vm-mem" }
vm-device = { path = "../vm-device" }
vm-accel = { path = "../vm-accel" }
log = "0.4"
thiserror = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
default = []
uefi = []
bios = []
direct-boot = []
