[package]
name = "vm-boot"
version = "0.1.0"
edition = "2024"

[dependencies]
vm-core = { path = "../vm-core" }
vm-mem = { path = "../vm-mem" }
vm-device = { path = "../vm-device" }
vm-accel = { path = "../vm-accel" }
vm-optimizers = { path = "../vm-optimizers" }
vm-runtime = { path = "../vm-runtime" }
log = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
parking_lot = { workspace = true }
num_cpus = { workspace = true }

[features]
default = []
# Feature flags removed: uefi, bios, direct-boot (not used in code)
